--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
 .project
-.DS_Store
 .meteor/*
+
+.DS_Store
+.AppleDouble
+.LSOverride
+Icon
+
+
+# Thumbnails
+._*
+
+# Files that might appear on external disk
+.Spotlight-V100
+.Trashes
