--- a/public/config.json
+++ b/public/config.json
@@ -1,4 +1,4 @@
 {
-  "lastdeployed": "1/1/2013 12:02pm",
-  "revision": "e9906bc20b2adde9a8fca42994b2ba858b00405a"
+  "lastdeployed": "Wed Jan 2 01:02:22 2013 -0500",
+  "revision": "6e7e793275166eaab02a2e2c70d5e27aed71cd0a"
 }
