Updated revision and date information

--- a/public/config.json
+++ b/public/config.json
@@ -1,4 +1,4 @@
 {
-  "lastdeployed": "Wed Jan 2 01:02:22 2013 -0500",
-  "revision": "6e7e793275166eaab02a2e2c70d5e27aed71cd0a"
+  "lastdeployed": "2013-01-02",
+  "revision": "438fdb743c3d155a79a2ed377720d69631291981"
 }
